@@ -1,7 +1,7 @@
 #!/usr/bin/make -f
 
 %:
-	dh $@ --with python2 --buildsystem=pybuild
+	dh $* --with python2 --buildsystem=pybuild
 
 override_dh_auto_build:
 	PYBUILD_BUILD_ARGS=--install-lib=foo dh_auto_build
